SLIM-2077-added-test-with-mock-server

--- a/osgp/platform/osgp-secret-management/pom.xml
+++ b/osgp/platform/osgp-secret-management/pom.xml
@@ -150,5 +150,10 @@
             <artifactId>h2</artifactId>
             <!-- TODO scope>test</scope-->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ws</groupId>
+            <artifactId>spring-ws-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
