--- a/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
@@ -3,7 +3,7 @@ component.name=osgp-secret-management
 database.secret.resource=file:src/integration-test/resources/secret-mgmt-db.key
 soap.secret.resource=file:src/integration-test/resources/secret-mgmt-soap.key
 encryption.provider.type=JRE
-
+logging.level.org.springframework.ws=TRACE
 #Database Configuration
 #db.username=osp_admin
 #db.password=1234
