SLIM-2077 load keyfile on init and coverage improvents

--- a/osgp/platform/osgp-secret-management/src/main/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/main/resources/application.properties
@@ -3,6 +3,9 @@ component.name=osgp-secret-management
 database.secret.resource=file:/etc/ssl/certs/secret.aes
 soap.secret.resource=file:/etc/ssl/certs/soap-secret.aes
 encryption.provider.type=HSM
+
+#hsm.keystore.resource=file:/etc/ssl/certs/houston.keystore
+
 #Database Configuration
 #db.username=osp_admin
 #db.password=1234
