OC-595 ~ Adds logging of Kafka consumer records
Adds KafkaLogger for use with consumer configuration on Kafka topics to
be able to log data and metadata of messages that are posted on a topic.

Adds osgp-adapter-kafka-logging as deployable project in servlet
containers with configuration of consumers for currently known topics
in the GXF code base.

The configurations of the different logging consumers are subject to a
Spring conditional, following a boolean property (for instance
peakshaving.kafka.logging.enabled). Default this enabled property is set
to false, which should prevent warning or error logging if a Kafka
broker is not available for certain topics in a monitored environment.

The consumed messages for the configured topics will be logged to a file
specified in the logback configuration with an appender named MESSAGES.
This appender leaves out most of the default stuff that is normally
added as context with logged data, leaving only the date and time of
logging, and the message that is logged.

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -53,7 +53,7 @@ distributionautomation.kafka.bootstrap.servers=localhost:9092
 
 distributionautomation.kafka.topic=g_osgp_distributionautomation_monitoring_dev
 distributionautomation.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-distributionautomation.kafka.producer.value.serializer=org.opensmartgridplatform.adapter.kafka.da.infra.kafka.out.MeterReadingSerializer
+distributionautomation.kafka.producer.value.serializer=org.opensmartgridplatform.adapter.kafka.da.serialization.MeterReadingSerializer
 
 # Example Kafka SSL configuration for use in acceptance or production environments
 #distributionautomation.kafka.security.protocol=SSL
