--- a/osgp/shared/pom.xml
+++ b/osgp/shared/pom.xml
@@ -94,6 +94,8 @@
     <module>parent-shared</module>
     <module>shared</module>
     <module>osgp-dto</module>
+    <module>osgp-kafka-distributionautomation</module>
+    <module>osgp-kafka-logger</module>
     <module>osgp-ws-smartmetering</module>
     <module>osgp-ws-core</module>
     <module>osgp-ws-admin</module>
