--- a/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
@@ -3,39 +3,8 @@ component.name=osgp-secret-management
 database.secret.resource=file:src/integration-test/resources/secret-mgmt-db.key
 soap.secret.resource=file:src/integration-test/resources/secret-mgmt-soap.key
 encryption.provider.type=JRE
-logging.level.org.springframework.ws=TRACE
-#Database Configuration
-#db.username=osp_admin
-#db.password=1234
-
-#db.username.core=osgp_read_only_ws_user
-#db.password.core=1234
-
-#PostgreSQL
-#db.driver=org.postgresql.Driver
-#db.protocol=jdbc:postgresql://
-
-#db.host=localhost
-#db.port=5432
-#db.name=osgp_adapter_ws_smartmetering
-
-#db.host.core=localhost
-#db.port.core=5432
-#db.name.core=osgp_core
-
-#db.min_pool_size=1
-#db.max_pool_size=5
-#db.auto_commit=false
-#db.idle_timeout=120000
-
-#Hibernate Configuration
-#hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
-#hibernate.format_sql=true
-#hibernate.physical_naming_strategy=org.opensmartgridplatform.shared.application.config.HibernateNamingStrategy
-#hibernate.show_sql=false
-
-#Flyway configuration
-#flyway.initial.version=2020.001
-#flyway.initial.description=Initial version PostgreSQL
-#flyway.init.on.migrate=true
-
+#Test/debug configuration
+spring.main.banner-mode=off
+logging.level.org.springframework=OFF
+#logging.level.org.springframework.ws=TRACE
+spring.jpa.show-sql=false
