Fixed bug (regarding incorrect query generation for DB paging) by changing repo query

--- a/osgp/platform/osgp-secret-management/src/main/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 component.name=osgp-secret-management
 database.secret.resource=file:/etc/ssl/certs/secret.aes
 soap.secret.resource=file:/etc/ssl/certs/soap-secret.aes
-encryption.provider.type=HSM
+encryption.provider.type=JRE
 
 #hsm.keystore.resource=file:/etc/ssl/certs/houston.keystore
 
@@ -17,7 +17,7 @@ spring.datasource.password=1234
 #db.idle_timeout=120000
 
 #Hibernate Configuration
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
