Fixed inconsistent ITs caused by timing issue in query

--- a/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
@@ -5,7 +5,7 @@ soap.secret.resource=file:src/integration-test/resources/secret-mgmt-soap.key
 encryption.provider.type=JRE
 #Test/debug configuration
 spring.main.banner-mode=off
-logging.level.org.springframework=WARN
+logging.level.org.springframework=OFF
 #logging.level.org.springframework.ws=TRACE
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
