--- a/osgp/platform/osgp-secret-management/src/main/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 component.name=osgp-secret-management
 database.secret.resource=file:/etc/ssl/certs/secret.aes
 soap.secret.resource=file:/etc/ssl/certs/soap-secret.aes
-encryption.provider.type=JRE
+encryption.provider.type=HSM
 
 #hsm.keystore.resource=file:/etc/ssl/certs/houston.keystore
 
