SLIM-2253-use-secret-mangement-for-secure-keys

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -1,3 +1,11 @@
+soapclient.use.client.auth=false
+soapclient.default-uri=http://localhost:8080/osgp-secret-management/ws/SecretManagement
+#soapclient.ssl.trust-store=
+#soapclient.ssl.trust-store-password
+#soapclient.ssl.key-store
+#soapclient.ssl.key-store-password
+#soapclient.ssl.key-password
+
 #Database Configuration
 db.username.dlms=osp_admin
 db.password.dlms=1234
