SLIM-2253-use-secret-mangement-for-secure-keys

--- a/osgp/platform/osgp-secret-management/pom.xml
+++ b/osgp/platform/osgp-secret-management/pom.xml
@@ -164,5 +164,10 @@
             <artifactId>spring-ws-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.logback-extensions</groupId>
+            <artifactId>logback-ext-spring</artifactId>
+            <version>0.1.5</version>
+        </dependency>
     </dependencies>
 </project>
