SLIM-2253-use-secret-mangement-for-secure-keys-review-comments

--- a/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
@@ -3,9 +3,6 @@ component.name=osgp-secret-management
 database.secret.resource=file:src/integration-test/resources/secret-mgmt-db.key
 soap.secret.resource=file:src/integration-test/resources/secret-mgmt-soap.key
 encryption.provider.type=JRE
-#Test/debug configuration
+spring.jpa.hibernate.ddl-auto=update
 spring.main.banner-mode=off
 logging.level.org.springframework=OFF
-#logging.level.org.springframework.ws=TRACE
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
