--- a/osgp/platform/pom.xml
+++ b/osgp/platform/pom.xml
@@ -13,7 +13,7 @@
 
   <groupId>org.opensmartgridplatform</groupId>
   <artifactId>platform</artifactId>
-  <version>5.1.0-SNAPSHOT</version>
+  <version>5.1.0</version>
   <packaging>pom</packaging>
 
   <properties>
