--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -130,7 +130,7 @@ encryption.rsa.public.key.path=/etc/osp/smartmetering/keys/platform/dlms_device_
 triggered.simulator.url=https://localhost/osgp-simulator-dlms-triggered/wakeup
 triggered.simulator.ipaddress=127.0.0.1
 
-#Web service truststore
+#SimulatorTriggerConfig: Web service truststore
 web.service.truststore.location=/etc/ssl/certs/trust.jks
 web.service.truststore.password=123456
 web.service.truststore.type=jks
