--- a/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
+++ b/osgp/platform/osgp-secret-management/src/integration-test/resources/application.properties
@@ -1,7 +1,8 @@
 #Security configuration
 component.name=osgp-secret-management
 database.secret.resource=file:src/integration-test/resources/osgp-secret-management-db.key
-soap.secret.resource=file:src/integration-test/resources/osgp-secret-management-soap.key
+soap.public.key.resource=file:src/integration-test/resources/soap-caller-rsa-public.key
+soap.private.key.resource=file:src/integration-test/resources/soap-caller-rsa-private.key
 encryption.provider.type=JRE
 spring.jpa.hibernate.ddl-auto=update
 spring.main.banner-mode=off
