--- a/osgp/platform/osgp-secret-management/src/main/resources/osgp-secret-management.properties
+++ b/osgp/platform/osgp-secret-management/src/main/resources/osgp-secret-management.properties
@@ -1,7 +1,7 @@
 #Security configuration
 component.name=osgp-secret-management
 database.secret.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secret-management-db.key
-soap.secret.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secret-management-soap.key
+soap.public.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secret-management-soap-caller-rsa-public.key
 encryption.provider.type=HSM
 
 #hsm.keystore.resource=file:/etc/ssl/certs/houston.keystore
