SLIM-2077-Create-new-secret-management-moved-encryption-to-shared-implemened-rsa-for-secret-management

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -7,6 +7,8 @@ soapclient.ssl.trust-store-password=1234
 soapclient.ssl.key-store-password=1234
 soapclient.ssl.key-password=1234
 
+soap.public.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secret-management-soap-caller-rsa-public.key
+
 #Database Configuration
 db.username.dlms=osp_admin
 db.password.dlms=1234
