--- a/osgp/platform/osgp-domain-core/pom.xml
+++ b/osgp/platform/osgp-domain-core/pom.xml
@@ -195,6 +195,13 @@
       <artifactId>activemq-spring</artifactId>
     </dependency>
 
+    <!-- Utils -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- Testing dependencies -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
