SLIM-2512-HSTN - exchange the shared secret AES with PKI (RSA)

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -7,7 +7,7 @@ soapclient.ssl.trust-store-password=1234
 soapclient.ssl.key-store-password=1234
 soapclient.ssl.key-password=1234
 
-soap.public.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secret-management-soap-caller-rsa-public.key
+encryption.soap.rsa.private.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-protocol-adapter-rsa-private.key
 
 #Database Configuration
 db.username.dlms=osp_admin
@@ -120,7 +120,7 @@ schedule.retry.dlms.backoff.multiplier=2
 schedule.retry.dlms.backoff.exponential=true
 
 # device keys security
-encryption.key.path=/etc/osp/smartmetering/keys/platform/secret.aes
+#encryption.key.path=/etc/osp/smartmetering/keys/platform/secret.aes
 
 encryption.rsa.private.key.path=/etc/osp/smartmetering/keys/platform/dlms_device_keys_private
 encryption.rsa.public.key.path=/etc/osp/smartmetering/keys/platform/dlms_device_keys_public
