SLIM-2077-improved-exception-handling-separated-soap-schema

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/pom.xml
@@ -27,31 +27,12 @@
 
   <properties>
     <display.version>${project.version}-${BUILD_TAG}</display.version>
+    <osgp-ws-secret-management-version>5.2.0-SNAPSHOT</osgp-ws-secret-management-version>
     <skipITs>true</skipITs>
   </properties>
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.jvnet.jaxb2.maven2</groupId>
-        <artifactId>maven-jaxb2-plugin</artifactId>
-        <version>0.13.2</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <generatePackage>org.opensmartgridplatform.schemas.security.secretmanagement._2020._05</generatePackage>
-          <generateDirectory>${project.basedir}/src/main/java</generateDirectory>
-          <schemaDirectory>${project.basedir}/src/main/resources/wsdl</schemaDirectory>
-          <schemaIncludes>
-            <include>*.wsdl</include>
-          </schemaIncludes>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
@@ -133,6 +114,12 @@
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dlms</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-ws-secret-management</artifactId>
+      <version>${osgp-ws-secret-management-version}</version>
     </dependency>
 
     <!-- Spring Framework -->
