--- a/osgp/platform/osgp-secret-management/pom.xml
+++ b/osgp/platform/osgp-secret-management/pom.xml
@@ -34,6 +34,7 @@
         <maven.failsafe.plugin.version>3.0.0-M4</maven.failsafe.plugin.version>
         <spring.boot.maven.plugin.version>2.2.2.RELEASE</spring.boot.maven.plugin.version>
         <failOnMissingWebXml>false</failOnMissingWebXml>
+        <osgp-ws-secret-management-version>5.2.0-SNAPSHOT</osgp-ws-secret-management-version>
     </properties>
 
     <build>
@@ -42,24 +43,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.boot.maven.plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>${jaxb.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>xjc</id>
-                        <goals>
-                            <goal>xjc</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <sources>
-                        <source>${project.basedir}/src/main/resources/schemas/secretmgmt.xsd</source>
-                    </sources>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -111,7 +94,6 @@
     </build>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -127,6 +109,7 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -134,6 +117,11 @@
         <dependency>
             <groupId>org.opensmartgridplatform</groupId>
             <artifactId>shared</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opensmartgridplatform</groupId>
+            <artifactId>osgp-ws-secret-management</artifactId>
+            <version>${osgp-ws-secret-management-version}</version>
         </dependency>
         <dependency>
             <groupId>wsdl4j</groupId>
