--- a/osgp/shared/pom.xml
+++ b/osgp/shared/pom.xml
@@ -96,6 +96,7 @@
     <module>osgp-dto</module>
     <module>osgp-kafka-distributionautomation</module>
     <module>osgp-kafka-logger</module>
+    <module>osgp-ws-secret-management</module>
     <module>osgp-ws-smartmetering</module>
     <module>osgp-ws-core</module>
     <module>osgp-ws-admin</module>
