--- a/osgp/platform/osgp-secret-management/src/main/resources/osgp-secret-management.properties
+++ b/osgp/platform/osgp-secret-management/src/main/resources/osgp-secret-management.properties
@@ -1,6 +1,6 @@
 #Security configuration
 component.name=osgp-secret-management
-database.secret.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secret-management-db.key
+jre.encryption.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secret-management-jre.key
 soap.public.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secret-management-soap-caller-rsa-public.key
 encryption.provider.type=HSM
 
