--- a/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
@@ -10,11 +10,11 @@
 # then the application will use the defaults values below
 
 # Configures communication monitoring. Set to true for enabling, set to false for disabling 
-communication.monitoring.enabled=false
+communication.monitoring.enabled=true
 
 # Configures the minimum time between task runs, 
 # to prevent multiple domain adapters to run the task at the same time (time in minutes)
-#communication.monitoring.minimum.time.between.runs=2
+communication.monitoring.minimum.time.between.runs=1
 
 # Configures the scheduled times for the task to run
 #communication.monitoring.cron.expression=0 */5 * * * *
@@ -26,7 +26,7 @@ communication.monitoring.enabled=false
 #communication.monitoring.scheduler.thread.name.prefix=da-communication-monitoring-
 
 # Configures the maximum allowed time without communication for the devices (time in minutes)
-#communication.monitoring.maximum.time.without.communication=15
+communication.monitoring.maximum.time.without.communication=1
 
 # Configures the interval for updating the last communication time for the devices (time in seconds)
 #communication.monitoring.last.communication.update.interval=30
