OC-578 ~ Updates communication monitoring frequency
Ensures task runs every minute.

--- a/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
@@ -18,6 +18,7 @@ communication.monitoring.minimum.time.between.runs=1
 
 # Configures the scheduled times for the task to run
 #communication.monitoring.cron.expression=0 */5 * * * *
+communication.monitoring.cron.expression=0 */1 * * * *
 
 # Configures the thread pool size for the scheduler
 #communication.monitoring.scheduler.pool.size=1
