--- a/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/pom.xml
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/pom.xml
@@ -64,6 +64,12 @@ http://www.apache.org/licenses/LICENSE-2.0
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
+      <exclusions>
+          <exclusion>
+              <groupId>ch.qos.logback</groupId>
+              <artifactId>logback-classic</artifactId>
+          </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
