OC-574: Updates avro schema.

--- a/osgp/platform/osgp-adapter-kafka-logging/pom.xml
+++ b/osgp/platform/osgp-adapter-kafka-logging/pom.xml
@@ -37,6 +37,10 @@
     </dependency>
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-kafka-distributionautomation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-kafka-logger</artifactId>
     </dependency>
 
