--- a/osgp/platform/osgp-adapter-kafka-logging/src/main/resources/osgp-adapter-kafka-logging.properties
+++ b/osgp/platform/osgp-adapter-kafka-logging/src/main/resources/osgp-adapter-kafka-logging.properties
@@ -15,3 +15,21 @@ peakshaving.kafka.consumer.enable.auto.commit=true
 peakshaving.kafka.consumer.poll.timeout=3000
 peakshaving.kafka.consumer.concurrency=1
 peakshaving.kafka.consumer.auto.offset.reset=latest
+
+# ==================================================================
+# KAFKA CONFIG GRID MEASUREMENT PUBLISHED EVENT LOGGING CONSUMER
+# ==================================================================
+
+grid.measurement.published.event.kafka.logging.enabled=false
+
+grid.measurement.published.event.kafka.common.properties.prefix=grid.measurement.published.event.kafka
+grid.measurement.published.event.kafka.bootstrap.servers=localhost:9092
+grid.measurement.published.event.kafka.topic=m_LvMeasurementPublishedEventGXF_dev
+
+grid.measurement.published.event.kafka.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+grid.measurement.published.event.kafka.consumer.value.deserializer=org.opensmartgridplatform.adapter.kafka.da.serialization.GridMeasurementPublishedEventDeserializer
+grid.measurement.published.event.kafka.consumer.group.id=LvMeasurementPublishedEventGxfLoggingConsumer
+grid.measurement.published.event.kafka.consumer.enable.auto.commit=true
+grid.measurement.published.event.kafka.consumer.poll.timeout=3000
+grid.measurement.published.event.kafka.consumer.concurrency=1
+grid.measurement.published.event.kafka.consumer.auto.offset.reset=latest
