--- a/osgp/platform/osgp-secret-management/pom.xml
+++ b/osgp/platform/osgp-secret-management/pom.xml
@@ -34,7 +34,7 @@
         <wsdl4j.version>1.6.3</wsdl4j.version>
         <maven.failsafe.plugin.version>3.0.0-M4</maven.failsafe.plugin.version>
         <spring.boot.maven.plugin.version>2.2.2.RELEASE</spring.boot.maven.plugin.version>
-        <osgp-ws-secret-management-version>${parent.version}</osgp-ws-secret-management-version>
+        <osgp-ws-secret-management-version>${project.parent.version}</osgp-ws-secret-management-version>
         <com.h2database>1.4.200</com.h2database>
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
