Matching configuration, checked in boot log

--- a/osgp/platform/osgp-adapter-ws-core/src/main/resources/application.properties
+++ b/osgp/platform/osgp-adapter-ws-core/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.version=#@project.version@
 server.port=8082
 
 spring.main.allow-bean-definition-overriding=true
+spring.jpa.open-in-view=false
 
 management.endpoints.enabled-by-default=false
 management.endpoints.jmx.exposure.exclude=*
